Implemented tax management feature

--- a/web/src/app/app.component.html
+++ b/web/src/app/app.component.html
@@ -15,6 +15,7 @@
       <mat-divider></mat-divider>
       <a mat-list-item [routerLink]="['candy']" (click)="left.close()">Candy</a>
       <a mat-list-item [routerLink]="['pricing']" (click)="left.close()">Pricing</a>
+      <a mat-list-item [routerLink]="['tax']" (click)="left.close()">Tax</a>
       <mat-divider></mat-divider>
       <a mat-list-item [routerLink]="['currency']" (click)="left.close()">Currency</a>
       <a mat-list-item [routerLink]="['account']" (click)="left.close()">Account</a>
