--- a/web/src/app/common/component/common-layout/common-layout.component.scss
+++ b/web/src/app/common/component/common-layout/common-layout.component.scss
@@ -1,5 +1,4 @@
 :host {
-  display: grid;
   justify-self: center;
   position: relative;
   overflow: hidden;
@@ -11,5 +10,6 @@
 }
 
 :host.form {
-  margin: 20px;
+  padding: 20px;
+  box-sizing: border-box;
 }
