--- a/web/src/app/importexport/component/import-data-view/import-data-view.component.scss
+++ b/web/src/app/importexport/component/import-data-view/import-data-view.component.scss
@@ -3,9 +3,9 @@
 :host {
   display: grid;
   grid-template-columns: min-content 1fr;
-  grid-gap: 1rem;
   height: 100%;
   overflow: hidden;
+  background-color: #bdbdbd;
 }
 
 .preparation-error {
@@ -23,6 +23,7 @@
 .entries-card {
   overflow: hidden;
   resize: horizontal;
+  border-radius: 0;
 
   mat-tab-group {
     overflow: hidden;
@@ -40,9 +41,9 @@
 
     .marker {
       display: inline-block;
-      width: .2rem;
-      height: 3rem;
-      border-radius: .2rem;
+      width: 3px;
+      height: 36px;
+      border-radius: 2px;
       margin-right: 0;
     }
 
@@ -67,7 +68,7 @@
 }
 
 .filter {
-  padding: 1rem;
+  padding: 10px;
 
   form {
     display: grid;
@@ -78,7 +79,8 @@
   overflow: auto;
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+  margin: 10px;
+  gap: 10px;
   position: relative;
 
   .in-progress {
@@ -93,7 +95,7 @@
 
 .error-content {
   display: flex;
-  gap: .5rem;
+  gap: 5px;
   align-items: center;
 }
 
@@ -101,7 +103,7 @@
   mat-card-content {
     display: flex;
     flex-direction: row;
-    gap: 1rem;
+    gap: 10px;
     align-items: center;
 
     .operation-label {
@@ -116,7 +118,7 @@
 
 .additional-info {
   display: flex;
-  gap: 1rem;
+  gap: 10px;
 
   mat-card-subtitle {
     color: rgba(0,0,0,.87);
