Implemented new parser for TBC

--- a/web/src/app/importexport/component/import-data-start/import-data-start.component.html
+++ b/web/src/app/importexport/component/import-data-start/import-data-start.component.html
@@ -12,6 +12,11 @@
     </mat-form-field>
 
     <mat-form-field>
+      <mat-label>Currency</mat-label>
+      <currency-input formControlName="currency"></currency-input>
+    </mat-form-field>
+
+    <mat-form-field>
       <mat-label>File</mat-label>
       <file-input formControlName="file"></file-input>
     </mat-form-field>
