--- a/web/src/app/importexport/component/operation-revise-view/operation-revise-view.component.html
+++ b/web/src/app/importexport/component/operation-revise-view/operation-revise-view.component.html
@@ -15,14 +15,14 @@
       <mat-form-field>
         <mat-label>From</mat-label>
         <input formControlName="dateFrom" matInput [matDatepicker]="from" readonly (click)="from.open()">
-        <mat-datepicker touchUi #from></mat-datepicker>
+        <mat-datepicker [touchUi]="true" #from></mat-datepicker>
         <button mat-icon-button matSuffix (click)="form.patchValue({dateFrom: null})"><mat-icon>close</mat-icon></button>
       </mat-form-field>
 
       <mat-form-field>
         <mat-label>To</mat-label>
         <input formControlName="dateTo" matInput [matDatepicker]="to" readonly (click)="to.open()">
-        <mat-datepicker touchUi #to></mat-datepicker>
+        <mat-datepicker [touchUi]="true" #to></mat-datepicker>
         <button mat-icon-button matSuffix (click)="form.patchValue({dateTo: null})"><mat-icon>close</mat-icon></button>
       </mat-form-field>
 
