--- a/web/src/app/pricing/component/pricing-new-price/pricing-new-price.component.html
+++ b/web/src/app/pricing/component/pricing-new-price/pricing-new-price.component.html
@@ -62,6 +62,10 @@
           <input matInput formControlName="country">
         </mat-form-field>
         <mat-form-field>
+          <mat-label>City</mat-label>
+          <input matInput formControlName="city">
+        </mat-form-field>
+        <mat-form-field>
           <mat-label>Store</mat-label>
           <input matInput formControlName="store">
         </mat-form-field>
